[package]
name = "containerd_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cc_lib"
path = "src/lib.rs"

[[bin]]
name = "cc_bin"
path = "src/main.rs"


[dependencies]
prost = "0.11.6"
prost-types = "0.11.6"
tokio = "1.25.0"
tonic = "0.8.3"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.8.4"

